# gpis-light-transport

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Readme.md  vcpkg-configuration.json  vcpkg.json
data/example-scenes/gp-csg-test/: baked-32.json  baked-64.json  csg-two-spheres-eval-avg-32.vdb  csg-two-spheres-eval-avg-64.vdb  standard.json
data/example-scenes/gp-medium-knob/: no-csg.json  standard.json
data/example-scenes/gp-medium-wedge/: gp-medium-wedge-aniso.json  gp-medium-wedge-hl.json  gp-medium-wedge-ls.json  gp-medium-wedge-lv.json  gp-medium-wedge.json
data/example-scenes/gp-spsr/: bunny.json  bunny.vdb
src/core/bsdfs/: BsdfFactory.cpp  Fresnel.hpp  NDFBsdf.cpp  NDFBsdf.hpp  RoughConductorBsdf.cpp
src/core/cameras/: Camera.cpp  Camera.hpp
src/core/grids/: GPVdbGrid.cpp  GPVdbGrid.hpp  Grid.cpp  Grid.hpp  VdbGrid.cpp  VdbGrid.hpp  VdbRaymarcher.hpp
src/core/integrators/: Integrator.cpp  IntegratorFactory.cpp  TraceBase.cpp  TraceBase.hpp
src/core/integrators/bidirectional_path_tracer/: LightPath.cpp  PathVertex.cpp
src/core/integrators/gaussian_process_path_tracer/: GPPathTraceIntegrator.cpp  GPPathTraceIntegrator.hpp  GPPathTracer.cpp  GPPathTracer.hpp  GPPathTracerSettings.hpp
src/core/integrators/light_tracer/: LightTracer.cpp
src/core/integrators/path_tracer/: PathTraceIntegrator.cpp  PathTraceIntegrator.hpp  PathTracer.cpp  PathTracer.hpp
src/core/integrators/photon_map/: FrustumBinner.hpp  PhotonTracer.cpp
src/core/io/: FileUtils.cpp  FileUtils.hpp  ImageIO.cpp  JsonPtr.hpp  MeshIO.cpp  MultiProgress.hpp  ObjLoader.cpp  ObjLoader.hpp  Scene.cpp  Scene.hpp
src/core/math/: AffineArithmetic.cpp  AffineArithmetic.hpp  Box.hpp  GPFunctions.cpp  GPFunctions.hpp  GPNeuralNetwork.cpp  GPNeuralNetwork.hpp  GaussianProcess.cpp  GaussianProcess.hpp  GaussianProcessFactory.cpp  GaussianProcessFactory.hpp  Mat4f.hpp  MathUtil.hpp  Ray.hpp  SdfFunctions.cpp  SdfFunctions.hpp  TangentFrame.hpp  Vec.hpp  WeightSpaceGaussianProcess.cpp  WeightSpaceGaussianProcess.hpp
src/core/media/: AtmosphericMedium.cpp  AtmosphericMedium.hpp  ExponentialMedium.cpp  ExponentialMedium.hpp  FunctionSpaceGaussianProcessMedium.cpp  FunctionSpaceGaussianProcessMedium.hpp  GaussianProcessMedium.cpp  GaussianProcessMedium.hpp  HomogeneousMedium.cpp  HomogeneousMedium.hpp  Medium.cpp  Medium.hpp  MediumFactory.cpp  VoxelMedium.cpp  VoxelMedium.hpp  WeightSpaceGaussianProcessMedium.cpp  WeightSpaceGaussianProcessMedium.hpp
src/core/phasefunctions/: BRDFPhaseFunction.cpp  BRDFPhaseFunction.hpp  HenyeyGreensteinPhaseFunction.cpp  HenyeyGreensteinPhaseFunction.hpp  IsotropicPhaseFunction.cpp  IsotropicPhaseFunction.hpp  LambertianPhaseFunction.cpp  LambertianPhaseFunction.hpp  PhaseFunction.cpp  PhaseFunction.hpp  PhaseFunctionFactory.cpp  RayleighPhaseFunction.cpp  RayleighPhaseFunction.hpp
src/core/primitives/: Vertex.hpp
src/core/samplerecords/: MediumSample.hpp
src/core/sampling/: Gaussian.cpp  Gaussian.hpp
src/core/sse/: SimdFloat.hpp
src/core/transmittances/: GaussianProcessTransmittance.cpp  GaussianProcessTransmittance.hpp  TabulatedTransmittance.cpp  TabulatedTransmittance.hpp  TransmittanceFactory.cpp
src/editor/: BsdfDisplay.cpp  BsdfDisplay.hpp  ColorPickButton.cpp  ColorPickButton.hpp  MainWindow.cpp  MainWindow.hpp  PreviewWindow.cpp  PreviewWindow.hpp  PropertyWindow.cpp  PropertyWindow.hpp  QtLambda.hpp  RenderWindow.cpp  RenderWindow.hpp  TextureDisplay.hpp  TransformGizmo.cpp  TransformGizmo.hpp
src/editor/properties/: BoolProperty.hpp  BsdfProperties.hpp  BsdfProperty.hpp  FloatProperty.hpp  IntProperty.hpp  ListProperty.hpp  PathProperty.hpp  PrimitiveProperties.cpp  PrimitiveProperties.hpp  StringProperty.hpp  VectorProperty.hpp
src/tungsten-test/: bake-csg.cpp  bin-to-vdb.cpp  deriv-plotting-interact.py  deriv-plotting.ipynb  derivative-test.cpp  dft-realization-gen.cpp  intersection-test.cpp  kernel-explorer.cpp  lod-gen.cpp  microfacet-gen.cpp  mvn-test.cpp  nspsr-test.cpp  phase-function-sampling.cpp  plotting.ipynb  ray-view-realizations.cpp  realization-gen.cpp  transmittance-test.cpp  weight-space-test.cpp
